With 2D Array for grid

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <script src="script.js"></script>
 <title>GOL.js</title>
 <canvas id="canvas" width="800" height="600"></canvas>
+<button id="play"></button>
