--- a/index.html
+++ b/index.html
@@ -1,6 +1,62 @@
-<!DOCTYPE html>
-<link rel="stylesheet" href="styles.css" />
-<script src="script.js"></script>
-<title>GOL.js</title>
-<canvas id="canvas" width="800" height="600"></canvas>
-<button id="play"></button>
+<!doctype html>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
+    <title>GOLjs</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row justify-content-end">
+            <div class="col-auto">
+                <section id="display">
+                    <canvas id="canvas" width="800" height="600"></canvas>
+                    <br>
+                    <button type="button" class="btn btn-primary" id="play"></button>
+                    <button type="button" class="btn btn-secondary" id="draw">Draw now</button>
+                </section>
+            </div>
+            <div class="col">
+                <section id="parameters">
+                    <h2>Parameters</h2>
+                    <label for="step">Step size:
+                        <input type="number" name="step" id="step" min="0" step="1">
+                    </label>
+                    <br>
+                    <label for="draw-method">Drawing method:
+                        <div id="draw-method" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label class="btn btn-secondary active">
+                                <input type="radio" name="draw-method" id="Image" autocomplete="off"> Image
+                            </label>
+                            <label class="btn btn-secondary">
+                                <input type="radio" name="draw-method" id="Rect" autocomplete="off"> Rect
+                            </label>
+                        </div>
+                    </label>
+                    <br>
+                    <label for="display-switch">Display
+                        <input type="checkbox" id="display-switch">
+                    </label>
+                </section>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
